[fix: #229] Delete wrapping options for the grid
Might not be very common to use those options, so if the user wants them they should be added manually.

--- a/src/_atgrid.scss
+++ b/src/_atgrid.scss
@@ -50,14 +50,6 @@
   [#{$prefix}grid~="no-collapse"] { flex-flow: row nowrap; }
 
   //
-  // Wrap columns
-  //
-
-  [#{$prefix}grid~="wrap"] { flex-wrap: wrap; }
-  [#{$prefix}grid~="nowrap"] { flex-wrap: nowrap; }
-  [#{$prefix}grid~="wrap-reverse"] { flex-wrap: wrap-reverse; }
-
-  //
   // Direction of columns in a row
   //
 
